Using composition for enemies now
should have thought of this sooner really, it's pretty much a textbook case for it

--- a/Delver/Delver.vcxproj
+++ b/Delver/Delver.vcxproj
@@ -159,12 +159,15 @@
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="FightingBehaviour.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Gun.cpp" />
+    <ClCompile Include="MovementBehaviour.cpp" />
     <ClCompile Include="NavMap.cpp" />
     <ClCompile Include="PlayerKeyboardController.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="StationaryBeheviour.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Matrix2x3.cpp" />
     <ClCompile Include="pch.cpp">
@@ -196,11 +199,14 @@
     <ClInclude Include="Controller.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="Enemy.h" />
+    <ClInclude Include="FightingBehaviour.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Gun.h" />
+    <ClInclude Include="MovementBehaviour.h" />
     <ClInclude Include="NavMap.h" />
     <ClInclude Include="PlayerKeyboardController.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="StationaryBeheviour.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Matrix2x3.h" />
     <ClInclude Include="pch.h" />
