--- a/Delver/Delver.vcxproj.filters
+++ b/Delver/Delver.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClCompile Include="StationaryBeheviour.cpp">
       <Filter>Game Files\Actors\AIBehaviour\Movement</Filter>
     </ClCompile>
+    <ClCompile Include="PeacefulBehaviour.cpp">
+      <Filter>Game Files\Actors\AIBehaviour\Fighting</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -238,6 +241,9 @@
     </ClInclude>
     <ClInclude Include="StationaryBeheviour.h">
       <Filter>Game Files\Actors\AIBehaviour\Movement</Filter>
+    </ClInclude>
+    <ClInclude Include="PeacefulBehaviour.h">
+      <Filter>Game Files\Actors\AIBehaviour\Fighting</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
