Loot System work
Need to add manager now and will be done

--- a/Delver/Delver.vcxproj
+++ b/Delver/Delver.vcxproj
@@ -167,9 +167,14 @@
     <ClCompile Include="FightingBehaviour.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Gun.cpp" />
+    <ClCompile Include="Item.cpp" />
+    <ClCompile Include="ItemManager.cpp" />
+    <ClCompile Include="LootDropper.cpp" />
+    <ClCompile Include="LootTable.cpp" />
     <ClCompile Include="MovementBehaviour.cpp" />
     <ClCompile Include="NavMap.cpp" />
     <ClCompile Include="PeacefulBehaviour.cpp" />
+    <ClCompile Include="Pickup.cpp" />
     <ClCompile Include="PlayerKeyboardController.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
@@ -215,9 +220,14 @@
     <ClInclude Include="FightingBehaviour.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Gun.h" />
+    <ClInclude Include="Item.h" />
+    <ClInclude Include="ItemManager.h" />
+    <ClInclude Include="LootDropper.h" />
+    <ClInclude Include="LootTable.h" />
     <ClInclude Include="MovementBehaviour.h" />
     <ClInclude Include="NavMap.h" />
     <ClInclude Include="PeacefulBehaviour.h" />
+    <ClInclude Include="Pickup.h" />
     <ClInclude Include="PlayerKeyboardController.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="StationaryBeheviour.h" />
