--- a/Delver/Delver.vcxproj
+++ b/Delver/Delver.vcxproj
@@ -171,6 +171,8 @@
     <ClCompile Include="ItemManager.cpp" />
     <ClCompile Include="LootDropper.cpp" />
     <ClCompile Include="LootTable.cpp" />
+    <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="MenuComponent.cpp" />
     <ClCompile Include="MovementBehaviour.cpp" />
     <ClCompile Include="NavMap.cpp" />
     <ClCompile Include="PeacefulBehaviour.cpp" />
@@ -224,6 +226,8 @@
     <ClInclude Include="ItemManager.h" />
     <ClInclude Include="LootDropper.h" />
     <ClInclude Include="LootTable.h" />
+    <ClInclude Include="Menu.h" />
+    <ClInclude Include="MenuComponent.h" />
     <ClInclude Include="MovementBehaviour.h" />
     <ClInclude Include="NavMap.h" />
     <ClInclude Include="PeacefulBehaviour.h" />
