--- a/Delver/Delver.vcxproj.filters
+++ b/Delver/Delver.vcxproj.filters
@@ -61,6 +61,9 @@
     <Filter Include="Game Files\UI\Components">
       <UniqueIdentifier>{dc60872d-68ed-4284-aed9-9cd90b2b8c60}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game Files\UI\Components\Buttons">
+      <UniqueIdentifier>{57b20f29-a8fc-454d-9832-afc1156421ed}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Core.cpp">
@@ -204,6 +207,9 @@
     <ClCompile Include="MenuComponent.cpp">
       <Filter>Game Files\UI\Components</Filter>
     </ClCompile>
+    <ClCompile Include="PauseButton.cpp">
+      <Filter>Game Files\UI\Components\Buttons</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -346,6 +352,9 @@
     </ClInclude>
     <ClInclude Include="MenuComponent.h">
       <Filter>Game Files\UI\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="PauseButton.h">
+      <Filter>Game Files\UI\Components\Buttons</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
