--- a/Delver/Delver.vcxproj
+++ b/Delver/Delver.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="FloorDisplay.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Gun.cpp" />
+    <ClCompile Include="HealthDisplay.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="ItemManager.cpp" />
     <ClCompile Include="LootDropper.cpp" />
@@ -227,6 +228,7 @@
     <ClInclude Include="FloorDisplay.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Gun.h" />
+    <ClInclude Include="HealthDisplay.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemManager.h" />
     <ClInclude Include="LootDropper.h" />
