Player death and restart

--- a/Delver/Delver.vcxproj
+++ b/Delver/Delver.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="LootTable.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="PickupDisplay.cpp" />
+    <ClCompile Include="RestartButton.cpp" />
     <ClCompile Include="ResumeButton.cpp" />
     <ClCompile Include="MenuComponent.cpp" />
     <ClCompile Include="MovementBehaviour.cpp" />
@@ -235,6 +236,7 @@
     <ClInclude Include="LootTable.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="PickupDisplay.h" />
+    <ClInclude Include="RestartButton.h" />
     <ClInclude Include="ResumeButton.h" />
     <ClInclude Include="MenuComponent.h" />
     <ClInclude Include="MovementBehaviour.h" />
