Gun & pickup have sounds, ItemManager fix

--- a/Delver/Delver.vcxproj
+++ b/Delver/Delver.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="PlayerKeyboardController.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="StationaryBeheviour.cpp" />
     <ClCompile Include="StringPrinter.cpp" />
     <ClCompile Include="TextureManager.cpp" />
@@ -245,6 +246,7 @@
     <ClInclude Include="Pickup.h" />
     <ClInclude Include="PlayerKeyboardController.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="SoundManager.h" />
     <ClInclude Include="StationaryBeheviour.h" />
     <ClInclude Include="StringPrinter.h" />
     <ClInclude Include="TextureManager.h" />
